--- a/Public/html/FriendRequest.html
+++ b/Public/html/FriendRequest.html
@@ -105,34 +105,8 @@
         </section>
         <section id="content" class="card">
             <div class="friends-container">
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item d-flex justify-content-between align-items-center">
-                        <a href="3" class="chats"><img src="../img/login_icon.png" alt="..." class="profile-img"> Cras
-                            justo</a>
+                <ul class="list-group list-group-flush" id="requestList">
 
-                        <a href="#"><span class="badge" data-toggle="tooltip" data-placement="top" title="Accept"> <i
-                                    class="fas fa-check"></i> </span></a>
-                        <a href=""><span class="badge" data-toggle="tooltip" data-placement="top" title="Reject"> <i
-                                    class="fas fa-times"></i> </span></a>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center">
-                        <a href="#" class="chats"><img src="../img/login_icon.png" alt="..." class="profile-img">
-                            Dapibus ac facilisis in </a>
-
-                        <a href="#"><span class="badge" data-toggle="tooltip" data-placement="top" title="Accept"> <i
-                                    class="fas fa-check"></i> </span></a>
-                        <a href=""><span class="badge" data-toggle="tooltip" data-placement="top" title="Reject"> <i
-                                    class="fas fa-times"></i> </span></a>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center">
-                        <a href="#" class="chats"><img src="../img/login_icon.png" alt="..." class="profile-img">
-                            Morbi leo risus </a>
-
-                        <a href="#"><span class="badge" data-toggle="tooltip" data-placement="top" title="Accept"> <i
-                                    class="fas fa-check"></i> </span></a>
-                        <a href=""><span class="badge" title="Reject" data-toggle="tooltip" data-placement="top"
-                                title="Reject"> <i class="fas fa-times"></i> </span></a>
-                    </li>
                 </ul>
             </div>
 
@@ -191,12 +165,66 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/additional-methods.min.js"></script>
     <script src="../Js/index.js"></script>
     <script>
+        let userDetails = JSON.parse(localStorage.getItem("userData"));
         $(document).ready(
+            function getRequests() {
 
+                $.ajax({
+                        method: "GET",
+                        url: `http://localhost:3000/requestsRecieved?userId=${userDetails.id}`
+                    })
+                    .done(function (res) {
+                        res.forEach((element, index) => {
+                            console.log(res)
+                            $("#requestList").append(`<li
+                                class="list-group-item d-flex justify-content-between align-items-center">
+                                <a href="3" class="chats"><img src="../img/login_icon.png" alt="..."
+                                        class="profile-img"> ${element.firstname}  ${element.lastname}</a>
+
+                                '<span class="badge" data-toggle="tooltip"
+                                    onclick="accept('${element.senderId}','${element.firstname}','${element.lastname}','${element.age}','${element.state}','${element.city}')"
+                                    data-placement="top" title="Accept">'<i
+                                        class="fas fa-check"></i> </span>
+                                <span class="badge" data-toggle="tooltip" data-placement="top" title="Reject" onclick="reject(${element.id})"> <i
+                                        class="fas fa-times"></i> </span>
+                            </li>`)
+                        });
+                        console.log(res);
+                        $('[data-toggle="tooltip"]').tooltip()
+                    })
+            }
         )
-        $(function () {
-            $('[data-toggle="tooltip"]').tooltip()
-        })
+
+
+        function accept(id, firstnam, lastname, age, state, city) {
+            friendData = {
+                userId: userDetails.id,
+                friendId: id,
+                name: firstnam + " " + lastname,
+                age,
+                location: state + ", " + city
+            }
+
+            $.ajax({
+                    method: "POST",
+                    url: `http://localhost:3000/friends`,
+                    data: friendData
+                })
+                .done(function () {
+                    console.log('accepted')
+                })
+        }
+
+
+        function reject(id) {
+            $.ajax({
+                    method: "DELETE",
+                    url: `http://localhost:3000/requestsRecieved/${id}`
+                })
+                .done(function () {
+                    console.log('deleted')
+                })
+        }
         $(".close").click((e) => {
             e.preventDefault();
             $(".modal").hide()
